--- a/session-03/index.html
+++ b/session-03/index.html
@@ -1,8 +1,8 @@
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <title>Images, Tables and Intro to JS</title>
-    <link rel="stylesheet" href="assets/css/styles.css" />
+    <link rel="stylesheet" href="/session-03/assets/css/styles.css" />
   </head>
   <body>
     <header>
@@ -50,6 +50,6 @@
     <footer>
       <p>&copy; 2023 Your Company. All rights reserved.</p>
     </footer>
-    <script src="assets/js_starter/complex_object.js"></script>
+    <script src="/session-03/assets/js_starter/scripts_challenge_3.js"></script>
   </body>
 </html>
