session 4 modularisation activity

--- a/session-04/javascript-modularisation-activity-trblive-main/index.html
+++ b/session-04/javascript-modularisation-activity-trblive-main/index.html
@@ -53,6 +53,6 @@
         <p>&copy; 2023 Your Company. All rights reserved.</p>
       </div>
     </footer>
-    <script src="./js/index.js"></script>
+    <script src="js/main.js" type="module"></script>
   </body>
 </html>
