--- a/session-06/intro_to_state/index.html
+++ b/session-06/intro_to_state/index.html
@@ -1,8 +1,8 @@
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <title>Images, Tables and Intro to JS</title>
-    <link rel="stylesheet" href="assets/css/styles.css" />
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <header>
@@ -31,14 +31,14 @@
           <a href="#" class="btn">Read More</a>
         </div>
       </section>
-      <!-- <aside class="sidebar">
-        <h3>Books</h3>
-        <ul id="list">
-          <li>Harry Potter I</li>
-          <li>Harry Potter II</li>
-          <li>Harry Potter III</li>
-        </ul>
-      </aside> -->
+<!--      <aside class="sidebar">-->
+<!--        <h3>Books</h3>-->
+<!--        <ul id="list">-->
+<!--          <li>Harry Potter I</li>-->
+<!--          <li>Harry Potter II</li>-->
+<!--          <li>Harry Potter III</li>-->
+<!--        </ul>-->
+<!--      </aside>-->
       <aside id="app"></aside>
       <section>
         <button id="button1">Click Me</button>
@@ -51,6 +51,6 @@
     <footer>
       <p>&copy; 2023 Your Company. All rights reserved.</p>
     </footer>
-    <script src="assets/js/scripts_challenge_4.js"></script>
+    <script src="js_starter/scripts_challenge_4.js"></script>
   </body>
 </html>
