--- a/session-07/in-class-code/challenges/challenge_2_starter.html
+++ b/session-07/in-class-code/challenges/challenge_2_starter.html
@@ -1,27 +1,40 @@
-<html>
-  <body>
-    <!-- Chapter 4 code -->
-    <div id="app"></div>
-    <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
-    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-    <!-- Babel Script -->
-    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-    <script type="text/jsx">
-      const domNode = document.getElementById('app');
-      const root = ReactDOM.createRoot(domNode);
-      root.render(<App />);
+<html lang="en">
+<body>
+<!-- Chapter 4 code -->
+<div id="app"></div>
+<script src="https://unpkg.com/react@18/umd/react.development.js"></script>
+<script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+<!-- Babel Script -->
+<script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+<script type="text/jsx">
+    const domNode = document.getElementById('app');
+    const root = ReactDOM.createRoot(domNode);
+    root.render(<App />);
 
-      // Usage example
-      function App() {
+    function ItemList({ items }) {
+        // template
+        return (
+            <ol>
+                {items.map((item) => (
+                        <li key={item.id}>{item.title}</li>
+                ))}
+            </ol>
+        )
+    }
+
+    // Usage example
+    function App() {
         const items = [
-          { id: 1, title: "First Item" },
-          { id: 2, title: "Second Item" },
-          { id: 3, title: "Third Item" },
+            { id: 1, title: "First Item" },
+            { id: 2, title: "Second Item" },
+            { id: 3, title: "Third Item" },
         ];
 
         // Your code goes here to return JSX
         // Hint: you will need to loop through these items
-      }
-    </script>
-  </body>
+        // render
+        return <ItemList items={items}/>
+    }
+</script>
+</body>
 </html>
