--- a/session-07/in-class-code/challenges/challenge_3_starter.html
+++ b/session-07/in-class-code/challenges/challenge_3_starter.html
@@ -1,102 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>User Profile Display</title>
-  </head>
-  <body>
-    <div id="app"></div>
+</head>
+<body>
+<div id="app"></div>
+<script src="https://unpkg.com/react@18/umd/react.development.js"></script>
+<script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+<!-- Babel Script -->
+<script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+<script type="module">
 
-    <script>
-      const userObject = {
+    import { createElement } from 'react';
+
+    const userObject = {
         firstName: "John",
         lastName: "Doe",
         age: "30",
         isStudent: false,
         address: {
-          street: "123 Main St",
-          city: "Perth",
-          zipCode: "6000",
+            street: "123 Main St",
+            city: "Perth",
+            zipCode: "6000",
         },
         skills: ["JavaScript", "HTML", "CSS"],
         socialProfiles: {
-          twitter: "@johndoe",
-          linkedIn: "linkedin.com/in/johndoe",
+            twitter: "@johndoe",
+            linkedIn: "linkedin.com/in/johndoe",
         },
         isEmployed: true,
-      };
+    };
 
-      document.addEventListener("DOMContentLoaded", function () {
+    document.addEventListener("DOMContentLoaded", function () {
         const user = userObject; // Assuming userObject is defined elsewhere in the script
 
         const app = document.getElementById("app");
 
-        const container = document.createElement("div");
+        const name = createElement("h1", null, `${user.firstName} ${user.lastName}`);
 
-        const name = document.createElement("h1");
-        name.textContent = `${user.firstName} ${user.lastName}`;
-        container.appendChild(name);
+        const age = createElement("p", null, `Age: ${user.age}`);
 
-        const age = document.createElement("p");
-        age.textContent = `Age: ${user.age}`;
-        container.appendChild(age);
+        const student = createElement("p", null, `Student: ${user.isStudent ? "Yes" : "No"}`);
 
-        const student = document.createElement("p");
-        student.textContent = `Student: ${user.isStudent ? "Yes" : "No"}`;
-        container.appendChild(student);
+        const address = createElement(
+            "div",
+            null,
+            createElement("h2", null, "Address"),
+            createElement("p", null, `${user.address.street}`),
+            createElement("p", null, `${user.address.city}`, `${user.address.zipCode}`)
+        );
 
-        const address = document.createElement("div");
 
-        const addressHeader = document.createElement("h2");
-        addressHeader.textContent = "Address";
-        address.appendChild(addressHeader);
+        const skills = createElement(
+            "div",
+            null,
+            createElement("h2", null, "Skills"),
+            createElement("ul", null, user.skills.map((skill) => (
+                createElement("li", null, skill)
+            )))
+        );
 
-        const street = document.createElement("p");
-        street.textContent = user.address.street;
-        address.appendChild(street);
+        const social = createElement(
+            "div",
+            null,
+            createElement("h2", null, "Social Profiles"),
+            createElement("p", null, `Twitter: ${user.socialProfiles.twitter}`),
+            createElement("p", null, `LinkedIn: ${user.socialProfiles.linkedIn}`)
+        );
 
-        const cityZip = document.createElement("p");
-        cityZip.textContent = `${user.address.city}, ${user.address.zipCode}`;
-        address.appendChild(cityZip);
+        const employed = createElement(
+            "p", null, `Employed: ${user.isEmployed ? "Yes" : "No"}`
+        );
 
-        container.appendChild(address);
-
-        const skills = document.createElement("div");
-        const skillsHeader = document.createElement("h2");
-        skillsHeader.textContent = "Skills";
-        skills.appendChild(skillsHeader);
-
-        const skillsList = document.createElement("ul");
-        user.skills.forEach((skill) => {
-          const skillItem = document.createElement("li");
-          skillItem.textContent = skill;
-          skillsList.appendChild(skillItem);
-        });
-        skills.appendChild(skillsList);
-
-        container.appendChild(skills);
-
-        const social = document.createElement("div");
-        const socialHeader = document.createElement("h2");
-        socialHeader.textContent = "Social Profiles";
-
-        social.appendChild(socialHeader);
-        const twitter = document.createElement("p");
-        twitter.textContent = `Twitter: ${user.socialProfiles.twitter}`;
-        social.appendChild(twitter);
-
-        const linkedIn = document.createElement("p");
-        linkedIn.textContent = `LinkedIn: ${user.socialProfiles.linkedIn}`;
-        social.appendChild(linkedIn);
-        container.appendChild(social);
-
-        const employed = document.createElement("p");
-        employed.textContent = `Employed: ${user.isEmployed ? "Yes" : "No"}`;
-        container.appendChild(employed);
+        const container = createElement(
+            "div",
+            null,
+            name,
+            age,
+            student,
+            address,
+            skills,
+            social,
+            employed
+        );
 
         app.appendChild(container);
-      });
-    </script>
-  </body>
+    });
+</script>
+</body>
 </html>
